--- a/articles/healthcare-apis/index.yml
+++ b/articles/healthcare-apis/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: matjazl
   ms.author: matjazl
-  ms.date: 08/12/2020
-  ms.openlocfilehash: 66fc6223a50a062631a74e62e32e0e67c7d6ba73
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.date: 08/13/2020
+  ms.openlocfilehash: d633b5376832672ecc7c917e24728666b889e16c
+  ms.sourcegitcommit: faeabfc2fffc33be7de6e1e93271ae214099517f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88167481"
+  ms.locfileid: "88183439"
 landingContent:
 - title: Azure API for FHIR 入门
   linkLists:
@@ -25,6 +25,8 @@ landingContent:
     links:
     - text: 什么是 Azure API for FHIR？
       url: overview.md
+    - text: 什么是适用于 FHIR 的 Azure IoT 连接器（预览版）？
+      url: overview.md#azure-iot-connector-for-fhir-preview
   - linkListType: quickstart
     links:
     - text: 部署适用于 FHIR 的 API 服务器
