--- a/articles/security/benchmarks/index.yml
+++ b/articles/security/benchmarks/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 12/23/2019
-  ms.openlocfilehash: 7cebc4fb6e676470b46a52cf1ea62e0990e708e9
-  ms.sourcegitcommit: 50ef5c2798da04cf746181fbfa3253fca366feaa
+  ms.openlocfilehash: 705757e3021ff7421dd88e3a2661b1b51f3f927a
+  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/30/2020
-  ms.locfileid: "82607736"
+  ms.lasthandoff: 08/14/2020
+  ms.locfileid: "88213559"
 landingContent:
 - title: 关于 Azure 安全基准
   linkLists:
@@ -28,7 +28,13 @@ landingContent:
       url: introduction.md
     - text: Azure 安全控制概述
       url: overview.md
-- title: 安全控件
+    - text: 云中责任分担
+      url: ../fundamentals/shared-responsibility.md
+    - text: Azure 安全中心
+      url: ../../security-center/index.yml
+    - text: Azure 安全基础知识
+      url: ../fundamentals/index.yml
+- title: Azure 安全基准控制
   linkLists:
   - linkListType: overview
     links:
@@ -44,13 +50,95 @@ landingContent:
       url: security-control-vulnerability-management.md
     - text: 查看详细信息
       url: security-control-inventory-asset-management.md
-- title: 更多 Azure 安全信息
+- title: 计算安全基准
   linkLists:
-  - linkListType: learn
+  - linkListType: overview
     links:
-    - text: Azure 安全基础知识
-      url: ../fundamentals/index.yml
-    - text: 云中责任分担
-      url: ../fundamentals/shared-responsibility.md
-    - text: Azure 安全中心
-      url: ../../security-center/index.yml
+    - text: Linux 虚拟机
+      url: ../../virtual-machines/linux/security-baseline.md
+    - text: Windows 虚拟机
+      url: ../../virtual-machines/windows/security-baseline.md
+    - text: 虚拟机规模集
+      url: ../../virtual-machine-scale-sets/security-baseline.md
+    - text: Batch
+      url: ../../batch/security-baseline.md
+    - text: Azure Functions
+      url: ../../azure-functions/security-baseline.md
+- title: 容器安全基准
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 容器实例
+      url: ../../container-instances/security-baseline.md
+    - text: 容器注册表
+      url: ../../container-registry/security-baseline.md
+    - text: Service Fabric
+      url: ../../service-fabric/security-baseline.md
+- title: 分析安全基准
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 数据资源管理器
+      url: /azure/data-explorer/security-baseline
+    - text: Data Lake Analytics
+      url: ../../data-lake-analytics/security-baseline.md
+    - text: Databricks
+      url: ../../azure-databricks/security-baseline.md
+    - text: 数据工厂
+      url: ../../data-factory/security-baseline.md
+    - text: HDInsight
+      url: ../../hdinsight/security-baseline.md
+- title: 数据库安全基准
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Azure Redis 缓存
+      url: ../../azure-cache-for-redis/security-baseline.md
+    - text: Azure Database for MariaDB
+      url: ../../mariadb/security-baseline.md
+    - text: Azure Database for MySQL
+      url: ../../mysql/security-baseline.md
+    - text: Azure Database for PostgreDQL
+      url: ../../postgresql/security-baseline.md
+    - text: Azure SQL 数据库
+      url: ../../sql-database/security-baseline.md
+- title: 网络安全基准
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 应用程序网关
+      url: ../../application-gateway/security-baseline.md
+    - text: DDOS 保护
+      url: ../fundamentals/ddos-protection-security-baseline.md
+    - text: Azure ExpressRoute
+      url: ../../expressroute/security-baseline.md
+    - text: Azure 防火墙
+      url: ../../firewall/security-baseline.md
+    - text: 网络观察程序
+      url: ../../network-watcher/security-baseline.md
+- title: 安全基线
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Key Vault
+      url: ../../key-vault/security-baseline.md
+    - text: 安全中心
+      url: ../../security-center/security-baseline.md
+    - text: 客户密码箱
+      url: ../fundamentals/customer-lockbox-security-baseline.md
+    - text: Azure Policy
+      url: ../../governance/policy/concepts/azure-security-benchmark-baseline.md
+- title: 管理和集成
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 自动化
+      url: ../../automation/security-baseline.md
+    - text: 备份
+      url: ../../backup/security-baseline.md
+    - text: API 管理
+      url: ../../api-management/security-baseline.md
+    - text: 事件网格
+      url: ../../event-hubs/security-baseline.md
+    - text: 逻辑应用
+      url: ../../logic-apps/security-baseline.md
