--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -476,7 +476,7 @@
           href: platform/autoscale-virtual-machine-scale-sets.md
         - name: 使用 Webhook 和电子邮件通知
           href: platform/autoscale-webhook-email.md
-        - name: 疑难解答
+        - name: 故障排除
           href: platform/autoscale-troubleshoot.md
         - name: 资源日志架构
           href: platform/autoscale-resource-log-schema.md
@@ -494,6 +494,8 @@
               href: platform/alerts-metric.md
             - name: 使用动态阈值
               href: platform/alerts-dynamic-thresholds.md
+            - name: 针对多个系列的单个警报
+              href: platform/alerts-metric-multiple-time-series-single-rule.md
             - name: 基于日志的指标警报
               href: platform/alerts-metric-logs.md
             - name: 使用 Resource Manager 模板
@@ -708,7 +710,7 @@
                       href: app/status-monitor-v2-get-started.md
                     - name: 详细说明
                       href: app/status-monitor-v2-detailed-instructions.md
-                    - name: 疑难解答
+                    - name: 故障排除
                       href: app/status-monitor-v2-troubleshoot.md
                     - name: API 参考
                       href: app/status-monitor-v2-api-reference.md
@@ -746,7 +748,7 @@
               href: app/availability-alerts.md
             - name: 性能测试
               href: app/performance-testing.md
-            - name: 疑难解答
+            - name: 故障排除
               displayname: 'availability, troubleshoot, troubleshoot availability'
               href: app/troubleshoot-availability.md
         - name: 分布式跟踪
