--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 09/04/2019
-  ms.openlocfilehash: 08b54d7ae3217f9b9f7715ba2ccb3fe1a290cc05
-  ms.sourcegitcommit: 5cace04239f5efef4c1eed78144191a8b7d7fee8
+  ms.openlocfilehash: 85667dfcc33d7bc8d1bab5b73119be2ef3b81c40
+  ms.sourcegitcommit: faeabfc2fffc33be7de6e1e93271ae214099517f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86147120"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "88185989"
 highlightedContent:
   items:
   - title: Azure IoT 是什么？
@@ -74,20 +74,6 @@ conceptualContent:
     footerLink:
       url: ../iot-central/core/index.yml
       text: 查看详细信息
-  - title: 自定义预建的 IoT 解决方案
-    links:
-    - url: ../iot-accelerators/about-iot-accelerators.md
-      itemType: overview
-      text: Azure IoT 解决方案加速器是什么？
-    - url: ../iot-accelerators/quickstart-remote-monitoring-deploy.md
-      itemType: quickstart
-      text: 尝试远程监视解决方案
-    - url: ../iot-accelerators/quickstart-connected-factory-deploy.md
-      itemType: quickstart
-      text: 尝试连接工厂解决方案
-    footerLink:
-      url: ../iot-accelerators/index.yml
-      text: 查看详细信息
   - title: 在边缘设备上运行云智能
     links:
     - url: ../iot-edge/about-iot-edge.md
@@ -130,6 +116,20 @@ conceptualContent:
     footerLink:
       url: ../iot-dps/index.yml
       text: 查看详细信息
+  - title: 将智能设备集成到解决方案中
+    links:
+    - url: ../iot-pnp/overview-iot-plug-and-play.md
+      itemType: overview
+      text: 什么是 IoT 即插即用预览版？
+    - url: ../iot-pnp/quickstart-connect-device-node.md
+      itemType: quickstart
+      text: 将示例设备连接到 IoT 中心
+    - url: ../iot-pnp/concepts-developer-guide.md
+      itemType: concept
+      text: 开发人员指南
+    footerLink:
+      url: ../iot-pnp/index.yml
+      text: 查看详细信息
   - title: 探索和分析设备数据
     links:
     - url: ../time-series-insights/time-series-insights-update-overview.md
@@ -158,6 +158,20 @@ conceptualContent:
     footerLink:
       url: ../azure-maps/index.yml
       text: 查看详细信息
+  - title: 自定义预建的 IoT 解决方案
+    links:
+    - url: ../iot-accelerators/about-iot-accelerators.md
+      itemType: overview
+      text: Azure IoT 解决方案加速器是什么？
+    - url: ../iot-accelerators/quickstart-remote-monitoring-deploy.md
+      itemType: quickstart
+      text: 尝试远程监视解决方案
+    - url: ../iot-accelerators/quickstart-connected-factory-deploy.md
+      itemType: quickstart
+      text: 尝试连接工厂解决方案
+    footerLink:
+      url: ../iot-accelerators/index.yml
+      text: 查看详细信息
 tools:
   title: Azure IoT SDK
   summary: Azure IoT SDK 的参考文档
@@ -165,7 +179,7 @@ tools:
   - title: 适用于 C 的 Azure IoT SDK 参考
     imageSrc: https://docs.microsoft.com/media/logos/logo_c.svg
     url: https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/
-  - title: 适用于 Python 的 Azure IoT SDK（预览版）
+  - title: 适用于 Python 的 Azure IoT SDK
     imageSrc: https://docs.microsoft.com/media/logos/logo_python.svg
     url: https://github.com/Azure/azure-iot-sdk-python
   - title: 适用于 Node.js 的 Azure IoT SDK 参考
