--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -11,25 +11,26 @@ metadata:
   ms.collection: collection
   author: j-martens
   ms.author: jmartens
-  ms.date: 07/30/2020
-  ms.openlocfilehash: 40a8fc105dd297ec4bc70ecc0a27b9fa295d3fe1
-  ms.sourcegitcommit: 5f7b75e32222fe20ac68a053d141a0adbd16b347
+  ms.date: 08/17/2020
+  ms.custom: contperfq1
+  ms.openlocfilehash: 63e1e9216a5150b957a34e15def9726167694978
+  ms.sourcegitcommit: ef055468d1cb0de4433e1403d6617fede7f5d00e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/31/2020
-  ms.locfileid: "87474506"
+  ms.lasthandoff: 08/16/2020
+  ms.locfileid: "88258705"
 landingContent:
 - title: 机器学习入门
   linkLists:
   - linkListType: tutorial
     links:
-    - text: Python 笔记本
+    - text: 使用 Python 笔记本
       url: tutorial-1st-experiment-sdk-setup.md
-    - text: AutoML（无代码/低代码）
+    - text: 使用 AutoML（无代码/低代码）
       url: tutorial-first-experiment-automated-ml.md
-    - text: 设计器（拖放式）
+    - text: 在设计器中（拖放式）
       url: tutorial-designer-automobile-price-train-score.md
-    - text: RStudio
+    - text: 使用 RStudio
       url: tutorial-1st-r-experiment.md
 - title: 将 ML 模型引入 Azure
   linkLists:
