--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -138,6 +138,8 @@
           href: concepts-server-parameters.md
     - name: 开发
       items:
+        - name: 应用程序最佳做法
+          href: app-development-best-practices.md
         - name: 驱动程序和工具兼容性
           href: concepts-compatibility.md
         - name: 应用程序开发
