--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -351,7 +351,7 @@
       items:
         - name: 概述
           href: platform/agents-overview.md
-        - name: FAQ
+        - name: 常见问题解答
           href: faq.md#agents
         - name: Azure Monitor 代理
           items:
@@ -654,13 +654,19 @@
                   href: app/opencensus-python-dependency.md
                 - name: 请求
                   href: app/opencensus-python-request.md
-            - name: 网页
+            - name: Javascript
               items:
                 - name: 客户端 JavaScript
                   displayname: 'SPA, Single Page Applications, React, JS, Angular'
                   href: app/javascript.md
                 - name: 用于 JavaScript 的源映射
                   href: app/source-map-support.md
+                - name: 插件
+                  items:
+                    - name: 响应插件
+                      href: app/javascript-react-plugin.md
+                    - name: React Native 插件
+                      href: app/javascript-react-native-plugin.md
                 - name: 疑难解答
                   items:
                     - name: SDK 加载失败
@@ -1136,7 +1142,7 @@
           items:
             - name: 访问控制
               href: platform/workbooks-access-control.md
-            - name: 参数
+            - name: parameters
               items:
                 - name: 参数摘要
                   href: platform/workbooks-parameters.md
