--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -248,6 +248,8 @@
           href: manage/cost-management-budget-scenario.md
         - name: 使用成本警报
           href: costs/cost-mgt-alerts-monitor-usage-spending.md
+        - name: 分摊成本
+          href: costs/allocate-costs.md
         - name: 使用 Power BI Desktop 进行连接
           href: /power-bi/desktop-connect-azure-cost-management
         - name: 使用 Power BI 模板应用分析 Azure 成本
