--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -138,6 +138,8 @@
           href: move-region.md
 - name: 参考
   items:
+    - name: 客户端库
+      href: client-libraries.md
     - name: REST API 错误代码 - Azure Key Vault
       href: rest-error-codes.md
     - name: 常见参数和标头
