--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -60,8 +60,8 @@
               href: connect-asc-iot.md
             - name: 域名服务器
               href: connect-dns.md
-            - name: Microsoft Web 应用程序防火墙
-              href: connect-microsoft-waf.md
+            - name: Azure Web 应用程序防火墙
+              href: connect-azure-waf.md
             - name: Windows 防火墙
               href: connect-windows-firewall.md
             - name: Windows 安全事件
