--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -6,8 +6,6 @@
       href: load-balancer-overview.md
     - name: 新增功能
       href: whats-new.md
-    - name: 常见问题
-      href: load-balancer-faqs.md
 - name: 快速入门
   items:
     - name: 创建公共负载均衡器 - 门户
@@ -103,7 +101,7 @@
           href: 'https://docs.microsoft.com/azure/virtual-network/virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-cli'
         - name: Azure PowerShell
           href: 'https://docs.microsoft.com/azure/virtual-network/virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-powershell'
-        - name: Azure Resource Manager 模板
+        - name: Azure 资源管理器模板
           href: 'https://docs.microsoft.com/azure/virtual-network/ipv6-configure-standard-load-balancer-template-json'
           displayName: ARM
     - name: 配置负载均衡器的 TCP 空闲超时
@@ -130,14 +128,14 @@
           href: move-across-regions-internal-load-balancer-powershell.md
     - name: 仅出站的负载均衡器配置
       href: egress-only.md
-- name: 疑难解答
-  items:
-    - name: 对 Azure 负载均衡器进行故障排除
-      href: load-balancer-troubleshoot.md
-    - name: 排查常见部署错误
-      href: load-balancer-common-deployment-errors.md
-    - name: 解决常见的出站连接问题
-      href: troubleshoot-outbound-connection.md
+    - name: 疑难解答
+      items:
+        - name: 对 Azure 负载均衡器进行故障排除
+          href: load-balancer-troubleshoot.md
+        - name: 排查常见部署错误
+          href: load-balancer-common-deployment-errors.md
+        - name: 解决常见的出站连接问题
+          href: troubleshoot-outbound-connection.md
 - name: 参考
   items:
     - name: 代码示例
@@ -175,3 +173,5 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: 产品更新
       href: 'https://azure.microsoft.com/updates/?product=load-balancer'
+    - name: 常见问题解答
+      href: load-balancer-faqs.md
